Update admin.html fixing 9

--- a/admin.html
+++ b/admin.html
@@ -186,21 +186,18 @@ const listMsg = document.getElementById("listMsg");
   const prev = repEmployee.value || "all";
 
   const opts = [
-    <option value="all">All employees | كل الموظفين</option>,
+    `<option value="all">All employees | كل الموظفين</option>`,
     ...users
       .filter(u => (u.role || "employee") !== "admin")
-      .map(u =>
-        <option value="${escapeHtml(u.id)}">${escapeHtml(u.name || u.id)}</option>
-      )
+      .map(u => `<option value="${escapeHtml(u.id)}">${escapeHtml(u.name || u.id)}</option>`)
   ];
 
   repEmployee.innerHTML = opts.join("");
 
-  const stillExists = Array.from(repEmployee.options)
-    .some(o => o.value === prev);
-
+  const stillExists = Array.from(repEmployee.options).some(o => o.value === prev);
   repEmployee.value = stillExists ? prev : "all";
 }
+
 
     async function loadUsers(){
       listHint.textContent = "Loading...";
